--- a/med-records/src/components/addDocUI.css
+++ b/med-records/src/components/addDocUI.css
@@ -10,13 +10,26 @@
     padding-top: 1rem;
     text-align: center;
     position: absolute;
-    margin-top: 150px;
-    margin-left: 270px;
+    margin-top: 100px;
+    margin-left: 370px;
     z-index: 10;
     border-style: solid;
     background-color: white;
     width: 50%;
-    height: 60%;
+    height: 65%;
     border-radius: 1rem;
     border-color: black;
+}
+
+.share-pop-label {
+    font-family: 'Belleza';font-size: 35px;
+    font-weight: bolder;
+}
+
+.form-check-label {
+    font-family: 'Belleza';
+     font-size: 1rem;
+      font-weight: 'semi-bold';
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
 }
