--- a/med-records/src/components/shareUI.css
+++ b/med-records/src/components/shareUI.css
@@ -1,26 +1,27 @@
 .backdrop {
     position: fixed;
-    width: 100rem;
+    width: 100%;
     height: 100%;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.75);
 }
 
 .share-pop {
+    margin-left: 350px;
     padding-top: 1rem;
     text-align: center;
     position: absolute;
     margin-top: 150px;
-    margin-left: 270px;
     z-index: 10;
     border-style: solid;
     background-color: #74EBD5;
     background-image: linear-gradient(135deg, #74EBD5 0%, #9FACE6 100%);
 
     width: 50%;
-    height: 37%;
+    height: 20%;
     border-radius: 1rem;
     border-color: black;
+    /* margin-left: 10rem; */
 }
 
 .share-pop-label {
