--- a/med-records/src/components/sucessUI.css
+++ b/med-records/src/components/sucessUI.css
@@ -2,13 +2,16 @@
     padding-top: 1rem;
     text-align: center;
     position: absolute;
-    margin-top: 150px;
-    margin-left: 270px;
+    margin-top: 100px;
+    margin-left: 370px;
     z-index: 11;
     border-style: solid;
     background-color: white;
     width: 50%;
-    height: 60%;
+    height: 65%;
     border-radius: 1rem;
     border-color: black;
+    background-color: #74EBD5;
+    background-image: linear-gradient(135deg, #74EBD5 0%, #9FACE6 100%);
+
 }
