--- a/med-records/src/components/addDocUI.css
+++ b/med-records/src/components/addDocUI.css
@@ -6,22 +6,22 @@
     background-color: rgba(0, 0, 0, 0.75);
 }
 
-.share-pop {
+.add-pop {
     padding-top: 1rem;
     text-align: center;
     position: absolute;
-    margin-top: 100px;
+    margin-top: 80px;
     margin-left: 370px;
     z-index: 10;
     border-style: solid;
     background-color: white;
     width: 50%;
-    height: 65%;
+    height: 72%;
     border-radius: 1rem;
     border-color: black;
 }
 
-.share-pop-label {
+.add-pop-label {
     font-family: 'Belleza';font-size: 35px;
     font-weight: bolder;
 }
